# media

./: README.MD  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/include/: com_xxx_media_dbl_Media.h
app/src/main/cpp/src/: bitmap.cpp  native-lib.cpp  opengl.cpp
app/src/main/java/com/xxx/media/: App.java  Constant.java  MainActivity.java  TableVertices.java  Test.java  Vertices.java
app/src/main/java/com/xxx/media/activitys/: CameraSurfaceActivity.java  CameraSurfaceViewActivity.java  CameraTextureViewActivity.java  GLSurfaceViewActivity.java  MainActivity.java  MediaExtractorActivity.java  MediaMuxerActivity.java  NoTitlebarActivity.java  OpenELESActivity.java  OpenGLESActivity.java  OpenGLESTestActivity.java  SplashActivity.java  SurfaceViewActivity.java  (+1 more)
app/src/main/res/layout/: activity_camera.xml  activity_camera_surface.xml  activity_camera_surface_view.xml  activity_glsurface_view.xml  activity_media_extractor.xml  activity_media_muxer.xml  activity_open_eles.xml  activity_open_gles.xml  activity_open_glestest.xml  activity_splash.xml  activity_surface_view.xml
app/src/main/res/raw/: simple_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl
app/src/main/res/values/: strings.xml
base/src/main/: AndroidManifest.xml
demo01/: build.gradle
demo01/src/main/: AndroidManifest.xml
demo01/src/main/res/layout/: demo01_activity_main.xml
demo01/src/main/res/raw/: demo_vertex_shader_01.glsl
gradle/wrapper/: gradle-wrapper.properties
(+78 files in other folders)
